--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "free-nextadmin-nextjs",
-  "version": "1.2.1",
+  "name": "collabtract-frontend",
+  "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@10.18.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,7 +16,7 @@
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
-    "next": "15.1.6",
+    "next": "15.5.4",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0",
@@ -29,7 +30,7 @@
     "@types/react-dom": "19.0.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
